--- a/config/elastic_manager.yml
+++ b/config/elastic_manager.yml
@@ -1,9 +1,15 @@
+service_config:
+    nrf_ip: 10.100.200.40
+    service_label: 'amf'
+    image_name: 'free5gc-compose_free5gc-amf'
 docker_hosts:
     -
-        ip_addr: 192.168.15.249
+        host: 192.168.15.249
         port: 2376
         max_services: 1
+        container_config:
+            network: free5gc-compose_privnet
     -
-        ip_addr: 192.168.15.249
-        port: 2376
-        max_service: 1
+        host: 192.168.15.249
+        port: 2375
+        max_services: 1
