Changed docker structure and changed configs from env to file

--- a/config/elastic_manager.yml
+++ b/config/elastic_manager.yml
@@ -1,3 +1,7 @@
+monitor:
+    interval: 2
+    host: "192.168.15.249"
+    port: 5000
 service_config:
     nrf_ip: 10.100.200.40
     service_label: 'amf'
